fix: tags overlap issue

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -87,13 +87,11 @@
   border: 1px solid var(--gray-300);
   padding: 0.4rem 0.8rem;
   border-radius: 1.3rem;
-  position: absolute;
   z-index: 2;
   bottom: 1.8rem;
   left: 50%;
   background-color: #ffffffc6;
   color: var(--gray-900);
-  transform: translateX(-50%);
 }
 
 .ratingTitle {
